# connect4

./: .gitignore  Cargo.toml  README.md
connect-4/: .gitignore  clean.sh  run.sh  text.txt
connect-4/client/: Cargo.toml
connect-4/client/src/: connect_four.rs  game_elements.rs  main.rs  nav_bar.rs  routes.rs  toot_otto.rs
connect-4/client/src/connect_four/: board.rs  bot.rs
connect-4/client/src/game_elements/: board.rs
connect-4/client/src/routes/: connect4comp.rs  connect4human.rs  gamehistory.rs  home.rs  howtoconnect4.rs  howtotoot.rs  scoreboard.rs  tootottocomp.rs  tootottohuman.rs
connect-4/client/src/toot_otto/: board.rs  bot.rs
connect-4/client/static/: index.html  style.css
connect-4/common/: Cargo.toml
connect-4/common/src/: lib.rs
connect-4/server/: Cargo.toml  Rocket.toml
connect-4/server/src/: main.rs  routes.rs
connect-4/server/static/: client.js  client.wasm  index.html  style.css
pranav/: Cargo.toml
pranav/src/: connect_four.rs  game_board.rs  game_elements.rs  game_player.rs  main.rs  toot_otto.rs
pranav/src/connect_four/: board.rs  bot.rs  player.rs
pranav/src/game_elements/: board_size.rs  token.rs
pranav/src/toot_otto/: board.rs  bot.rs  player.rs
rust-connect-four/: Cargo.toml  LICENSE_MIT
rust-connect-four/src/: board.rs  lib.rs
rust-connect-four/www/: Connect4Human.html  GameHistory.html  HowToConnect4.html  HowToToot.html  ScoreBoard.html  TootOttoComputer.html  index.html  index.js  package-lock.json  package.json
rust-connect-four/www/js/: board.js
