[package]
name = "client"
version = "0.1.0"
authors = ["Trishia Gatilogo <gatilogo@ualberta.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.14.2", features = ["std_web"] }
yew-router = { version = "0.11.0", features = ["std_web"] }