[package]
name = "server"
version = "0.1.0"
authors = ["Trishia Gatilogo <gatilogo@ualberta.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.4", default-features = false }
#mongodb = "0.9.0"
#bson = "0.14.1"

[dependencies.rocket_contrib]
version = "0.4.4"
features = ["mongodb_pool"]